change report confirmation buttons
call and email buttons in report confirmation pop up replaced with close button

--- a/service-request.html
+++ b/service-request.html
@@ -193,8 +193,7 @@
             <p>A copy of this report has been sent to the email address you provided. Keep in mind Our Access only facilitates these reports that will then be processed by University Facilities & Services. To get in touch with University Facilities & Services, please see the helpful links below.</p>
           </div>
           <div class="modal-footer">
-            <a type="button" class="btn btn-light" href="tel:5852753333">Call</a>
-            <a type="button" class="btn btn-light" href="mailto:faccust@facilities.rochester.edu" target="_blank">Email</a>
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Close</button>
           </div>
         </div>
       </div>
