--- a/disability-resources.html
+++ b/disability-resources.html
@@ -24,15 +24,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Accessibility Map</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="service-request.html">Service Request</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Disability Resources</a>
-          </li>
-        </ul>
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+        <li class="nav-item">
+          <a class="nav-link" href="map.html">Accessibility Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="service-request.html">Service Request</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Disability Resources</a>
+        </li>
+      </ul>
       </div>
     </div>
   </nav>
