--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-        <title>Our Access - Find a route</title>
+        <title>Our Access - Disability Resources</title>
         <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.js"></script>
@@ -23,217 +23,34 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+              </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Accessibility Map</a>
+            <a class="nav-link" href="map.html">Accessibility Map</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="service-request.html">Service Request</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="disability-resources.html">Disability Resources</a>
+            <a class="nav-link" aria-current="page" href="disability-resources.html">Disability Resources</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <body id="accessibility-map">
-    <div id="routing">
-        <aside id="sidebar-container" hidden>
-            <div id="sidebar">
-                <div id="route-input">
-                    <div id="input-fields">
-                        <div class="input-group mb-3">
-                          <select class="form-select" aria-label="Select starting building" id="start-building" name="start-building" onchange="propogateFloors('start-building', 'start-floor')">
-                            <option selected></option>
-                            <option>Burton</option>
-                            <option>Morey</option>
-                            <option>Rettner</option>
-                            <option>Rush Rhees</option>
-                          </select>
-                            <select class="form-select" aria-label="Select starting floor" id="start-floor" name="start-floor">
-                                <option selected>--</option>
-                            </select>
-                        </div>
-                        <div class="input-group mb-3">
-                          <select class="form-select" aria-label="Select destination building" id="end-building" name="end-building" onchange="propogateFloors('end-building', 'end-floor')">
-                            <option selected></option>
-                            <option>Burton</option>
-                            <option>Morey</option>
-                            <option>Rettner</option>
-                            <option>Rush Rhees</option>
-                          </select>
-                            <select class="form-select" aria-label="Select destination floor" id="end-floor" name="end-floor">
-                                <option selected>--</option>
-                            </select>
-                        </div>
-                    </div>
-                    <img src="assets/bx-transfer.svg" alt="icon to switch starting location with destination" role="button" onclick="switchInput()">
-                </div>
-                <div id="route-info">
-                    <div id="info-header"><img src="assets/expand-vertical-regular-24.png" alt="vertical expand icon" onclick="expandInfo()" id="expand-icon"><h2>Destination</h2></div>
-                    <div id="access-features">
-                        <h3>Allow the following:</h3>
-                        <form id="access-checkboxes">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="allowSteps" id="allowSteps">
-                                <label class="form-check-label" for="allowSteps">
-                                    Allow Steps
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="allowStairs" id="allowStairs">
-                                <label class="form-check-label" for="allowStairs">
-                                    Allow Stairs
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="allowDoors" id="allowDoors">
-                                <label class="form-check-label" for="allowDoors">
-                                    Allow Manual Doors
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="allowElevators" id="allowElevators">
-                                <label class="form-check-label" for="allowElevators">
-                                    Allow Inaccessible Elevators
-                                </label>
-                            </div>
-                        </form>
-                    </div>
-                    <div id="directions-container" hidden>
-                        <p id="route-length"></p>
-                        <p id="access-summary">Allow: </p>
-                        <div id="display-directions">
-                            <ul id="directions"></ul>
-                        </div>
-                    </div>
-                </div>
-                <button class="btn btn-primary" id="find-route" onclick="find_route(event)">Go</button> 
-                <button class="btn btn-secondary" id="finish-route"  data-bs-toggle="modal" data-bs-target="#end-route-confirmation" hidden>Finish</button>
-            </div>
-        </aside>
-        <main id="map" class="overlay-map"></main>
+  <body>
+    <div id="banner">
+        <h1 id="resources-heading">Home</h1>
+      <img src="assets/resource1.png" alt="Three students outside on a college campus.  Two of the students are walking and one is traveling with them by wheelchair.">
+        <h2>A path to campus accessibility</h2>
     </div>
-      <!--input overlay before both endpoints selected-->
-    <div id="input-overlay">
-        <div class="input-group mb-3">
-          <select class="form-select" aria-label="Select starting building" id="start-building-overlay" name="start-building-overlay" onchange="propogateFloors('start-building-overlay', 'start-floor-overlay')">
-            <option selected></option>
-            <option>Burton</option>
-            <option>Morey</option>
-            <option>Rettner</option>
-            <option>Rush Rhees</option>
-          </select>
-            <select class="form-select" aria-label="Select starting floor" id="start-floor-overlay" name="start-floor-overlay">
-                <option selected>Floor</option>
-            </select>
-        </div>
-        <div class="input-group mb-3">
-          <select class="form-select" aria-label="Select destination building" id="end-building-overlay" name="end-building-overlay" onchange="propogateFloors('end-building-overlay', 'end-floor-overlay')">
-            <option selected></option>
-            <option>Burton</option>
-            <option>Morey</option>
-            <option>Rettner</option>
-            <option>Rush Rhees</option>
-          </select>
-            <select class="form-select" aria-label="Select destination floor" id="end-floor-overlay" name="end-floor-overlay">
-                <option selected>Floor</option>
-            </select>
-        </div>
+
+    <div id="link-buttons">
+      <a href="/map.html" type="button" class="btn btn-secondary">Accessibility Map</a>
+      <a href="/service-request.html" type="button" class="btn btn-secondary">Service Requests</a>
+      <a href="/disability-resources.html" type="button" class="btn btn-secondary">Disability Resources</a>
     </div>
-    
-    <!-- Confirmation pop up -->
-    <div class="modal fade" id="end-route-confirmation" tabindex="-1" aria-labelledby="end directions confirmation pop-up" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="end-route-label">End Journey</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-               <p>Did you get to your destination?</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="endRoute()">Yes, end journey</button>
-              <button type="button" class="btn btn-primary-outline" data-bs-dismiss="modal">No, take me back</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Report from map pop up #1 -->
-    <div class="modal fade" id="map-report" tabindex="-1" aria-labelledby="report issue from map directions pop-up" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="map-report-label">Report</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p id="report-single" hidden></p>
-                <div id="report-multiple" hidden></div>
-
-                <div class="form-floating">
-                    <input type="email" class="form-control required" id="map-reporter-email" placeholder="University Email" required = "true">
-                    <label for="map-reporter-email"><span style="color: red;">*</span> University Email</label>
-                </div>
-                <div class="form-floating">
-                    <input type="tel" class="form-control required" id="map-reporter-phone" placeholder="Phone Number" required = "true">
-                    <label for="map-reporter-phone"><span style="color: red;">*</span> Phone Number</label>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal"  data-bs-toggle="modal" data-bs-target="#map-report-details" onclick="mapReportDetails()">Next</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Report from map pop-up #2 -->
-      <div class="modal fade" id="map-report-details" tabindex="-1" aria-labelledby="report more details pop-up" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="map-report-details-label">Report</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p id="report-selected"></p>
-
-                <div>
-                    <label for="map-reporter-details">Are there any additional details you wish to provide?</label>
-                    <input type="textarea" id="map-reporter-details">
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal"  data-bs-toggle="modal" data-bs-target="#map-report-confirmation" onclick="confirmMapReport()">Submit Report</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Report from map confirmation pop-up -->
-      <div class="modal fade" id="map-report-confirmation" tabindex="-1" aria-labelledby="report issue from map confirmation pop-up" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="map-report-confirm-label">Report Confirmation</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p id="confirm-reporter-email"></p>
-                <p id="confirm-reporter-phone"></p>
-                <p id="confirm-report-date"></p>
-                <p id="you-reported"></p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    <script src="scripts/map-script.js"></script>
   </body>
-  <footer>&copy Our Access 2023</footer>
   </html>
