--- a/map.html
+++ b/map.html
@@ -40,11 +40,12 @@
     </div>
   </nav>
 
-  <body id="accessibility-map">
+  <body id="accessibility-map" onresize="if(window.outerWidth > 800) document.getElementById('map').hidden = false;">
     <div id="routing">
         <aside id="sidebar-container">
             <div id="sidebar">
                 <div id="route-input">
+                  <img src="assets/funnel-fill.svg" id="filter-access" alt="icon to bring up access features checkboxes" role="button" onclick="document.getElementById('map').hidden = !document.getElementById('map').hidden;">
                     <div id="input-fields">
                         <div class="input-group mb-3">
                           <select class="form-select" aria-label="Select starting building" id="start-building" name="start-building" onchange="propogateFloors('start-building', 'start-floor')">
@@ -74,6 +75,7 @@
                     <img src="assets/bx-transfer.svg" alt="icon to switch starting location with destination" role="button" onclick="switchInput()">
                 </div>
                 <div id="route-info">
+                    <button type="button" class="btn-close" id="close-info" aria-label="Close" onclick="document.getElementById('map').hidden = false"></button>
                     <div id="info-header"><h2>Destination</h2></div>
                     <div id="access-features">
                         <h3>Allow the following:</h3>
