--- a/service-request.html
+++ b/service-request.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="assets/our_access_logo.png" alt="" height="32" class="d-inline-block align-text-top">
             Our Access
         </a>
@@ -24,9 +24,6 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-        <li class="nav-item">
           <a class="nav-link" href="map.html">Accessibility Map</a>
         </li>
         <li class="nav-item">
