style full directions list

--- a/map.html
+++ b/map.html
@@ -126,12 +126,78 @@
                       <label class="form-check-label" for="edge-or-node">
                         <p id="current-dir-step">Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor</p>
                       </label>
+                    </div>
                   </div>
                   </div>
-                  </div>
-                <div id="directions-container" hidden>
+                <div id="directions-container" hidden="false">
                     <div id="display-directions">
-                        <ul id="directions"></ul>
+                        <ul id="directions">
+                          <li class="dir">
+                            <div class="dir-step-overview">
+                              <p id="">Rettner</p>
+                              <p id="">Change floors</p>
+                              <img src="assets/exclamation-octagon-fill-dark.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route" role="button" onclick="console.log('report function')">
+                            </div>
+                            <div class="form-check dir-step-check-dark" id="">
+                              <input class="form-check-input" type="checkbox" value="" id="">
+                              <label class="form-check-label" for="">
+                                <p id="dir-step">Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor</p>
+                              </label>
+                            </div>
+                          </li>
+                          <li class="dir">
+                            <div class="dir-step-overview">
+                              <p id="">Rettner</p>
+                              <p id="">Change floors</p>
+                              <img src="assets/exclamation-octagon-fill-dark.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route" role="button" onclick="console.log('report function')">
+                            </div>
+                            <div class="form-check dir-step-check" id="">
+                              <input class="form-check-input" type="checkbox" value="" id="">
+                              <label class="form-check-label" for="">
+                                <p id="dir-step">Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor</p>
+                              </label>
+                            </div>
+                          </li>
+                          <li class="dir">
+                            <div class="dir-step-overview">
+                              <p id="">Rettner</p>
+                              <p id="">Change floors</p>
+                              <img src="assets/exclamation-octagon-fill-dark.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route" role="button" onclick="console.log('report function')">
+                            </div>
+                            <div class="form-check dir-step-check" id="">
+                              <input class="form-check-input" type="checkbox" value="" id="">
+                              <label class="form-check-label" for="">
+                                <p id="dir-step">Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor</p>
+                              </label>
+                            </div>
+                          </li>
+                          <li class="dir">
+                            <div class="dir-step-overview">
+                              <p id="">Rettner</p>
+                              <p id="">Change floors</p>
+                              <img src="assets/exclamation-octagon-fill-dark.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route" role="button" onclick="console.log('report function')">
+                            </div>
+                            <div class="form-check dir-step-check" id="">
+                              <input class="form-check-input" type="checkbox" value="" id="">
+                              <label class="form-check-label" for="">
+                                <p id="dir-step">Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor</p>
+                              </label>
+                            </div>
+                          </li>
+                          <li class="dir">
+                            <div class="dir-step-overview">
+                              <p id="">Rettner</p>
+                              <p id="">Change floors</p>
+                              <img src="assets/exclamation-octagon-fill-dark.svg" class="dir-step-report" alt="icon to report broken access feature for this step in the route" role="button" onclick="console.log('report function')">
+                            </div>
+                            <div class="form-check dir-step-check" id="">
+                              <input class="form-check-input" type="checkbox" value="" id="">
+                              <label class="form-check-label" for="">
+                                <p id="dir-step">Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor Move from 1st floor to 2nd floor</p>
+                              </label>
+                            </div>
+                          </li>
+                        </ul>
                     </div>
                 </div>
                 <button class="btn btn-primary" id="find-route" onclick="find_route(event)">Go</button> 
