--- a/map.html
+++ b/map.html
@@ -41,7 +41,7 @@
     <div id="routing">
         <aside id="sidebar-container">
             <div id="sidebar">
-                <div id="route-input" hidden>
+                <div id="route-input">
                   <img src="assets/funnel-fill.svg" id="filter-access" alt="icon to bring up access features checkboxes" role="button" onclick="document.getElementById('map').hidden = !document.getElementById('map').hidden;">
                     <div id="input-fields">
                         <div class="input-group mb-3">
@@ -71,7 +71,7 @@
                     </div>
                     <img src="assets/bx-transfer.svg" alt="icon to switch starting location with destination" role="button" onclick="switchInput()">
                 </div>
-                <div id="route-info" hidden>
+                <div id="route-info">
                     <button type="button" class="btn-close" id="close-info" aria-label="Close" onclick="document.getElementById('map').hidden = false"></button>
                     <div id="info-header"><h2>Destination</h2></div>
                     <div id="access-features">
@@ -104,15 +104,15 @@
                         </form>
                     </div>
                 </div>
-                <div id="route-directions">
+                <div id="route-directions" hidden>
                   <div id="input-bar">
-                    <img src="assets/arrow-return-left.svg" id="toggle-dir" alt="icon to go back to adjust route requirements" role="button" onclick="console.log('go back')">
+                    <img src="assets/arrow-return-left.svg" id="redo-input" alt="icon to go back to adjust route requirements" role="button" onclick="console.log('go back')">
                     <div id="display-input">
                       <p id="display-start">Burton 1</p>
                       <p>&#10141</p>
                       <p id="display-end">Rettner 2</p>
                     </div>
-                    <p id="total-distance">678 feet</p>
+                    <p id="route-length">678 feet</p>
                   </div>
                   <div id="current-dir-box" class="current-dir">
                     <div class="dir-step-overview">
@@ -128,8 +128,8 @@
                       </label>
                     </div>
                   </div>
-                  </div>
-                <div id="directions-container" hidden="false">
+                </div>
+                <div id="directions-container" hidden>
                     <div id="display-directions">
                         <ul id="directions">
                           <li class="dir">
