add function to directions back button

--- a/map.html
+++ b/map.html
@@ -106,7 +106,7 @@
                 </div>
                 <div id="route-directions" hidden>
                   <div id="input-bar">
-                    <img src="assets/arrow-return-left.svg" id="redo-input" alt="icon to go back to adjust route requirements" role="button" onclick="console.log('go back')">
+                    <img src="assets/arrow-return-left.svg" id="redo-input" alt="icon to go back to adjust route requirements" role="button" onclick="endRoute()">
                     <div id="display-input">
                       <p id="display-start">Burton 1</p>
                       <p>&#10141</p>
