add remaining eastman quad data

--- a/map.html
+++ b/map.html
@@ -47,7 +47,12 @@
                         <div class="input-group mb-3">
                           <select class="form-select" aria-label="Select starting building" id="start-building" name="start-building" onchange="propogateFloors('start-building', 'start-floor')">
                             <option selected></option>
+                            <option>Bausch & Lomb</option>
                             <option>Burton</option>
+                            <option>Dewey</option>
+                            <option>Hoyt</option>
+                            <option>Interfaith Chapel</option>
+                            <option>Lattimore</option>
                             <option>Morey</option>
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
@@ -59,7 +64,12 @@
                         <div class="input-group mb-3">
                           <select class="form-select" aria-label="Select destination building" id="end-building" name="end-building" onchange="propogateFloors('end-building', 'end-floor')">
                             <option selected></option>
+                            <option>Bausch & Lomb</option>
                             <option>Burton</option>
+                            <option>Dewey</option>
+                            <option>Hoyt</option>
+                            <option>Interfaith Chapel</option>
+                            <option>Lattimore</option>
                             <option>Morey</option>
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
@@ -108,11 +118,11 @@
                   <div id="input-bar">
                     <img src="assets/arrow-return-left.svg" id="redo-input" alt="icon to go back to adjust route requirements" role="button" onclick="endRoute()">
                     <div id="display-input">
-                      <p id="display-start">Burton 1</p>
+                      <p id="display-start"></p>
                       <p>&#10141</p>
-                      <p id="display-end">Rettner 2</p>
+                      <p id="display-end"></p>
                     </div>
-                    <p id="route-length">678 feet</p>
+                    <p id="route-length"></p>
                   </div>
                   <div id="current-dir-box" class="current-dir">
                     <div class="dir-step-overview">
