--- a/map.html
+++ b/map.html
@@ -53,6 +53,7 @@
                             <option>Hoyt</option>
                             <option>Interfaith Chapel</option>
                             <option>Lattimore</option>
+                            <option>Meliora</option>
                             <option>Morey</option>
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
@@ -70,6 +71,7 @@
                             <option>Hoyt</option>
                             <option>Interfaith Chapel</option>
                             <option>Lattimore</option>
+                            <option>Meliora</option>
                             <option>Morey</option>
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
