fix minor accessibility concerns

--- a/disability-resources.html
+++ b/disability-resources.html
@@ -13,6 +13,7 @@
     </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="#main" class="skip">Skip to main content</a>
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
             <img src="assets/our_access_logo.png" alt="" height="32" class="d-inline-block align-text-top">
@@ -23,6 +24,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
           <a class="nav-link" href="map.html">Accessibility Map</a>
         </li>
         <li class="nav-item">
@@ -36,14 +41,9 @@
     </div>
   </nav>
 
-  <body>
+  <body id="main">
     <h1 id="resources-heading">Campus Resources</h1>
     <div id="banner-slides" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#banner-slides" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Register with Disability Resources"></button>
-        <button type="button" data-bs-target="#banner-slides" data-bs-slide-to="1" aria-label="Creating a Service Request"></button>
-        <button type="button" data-bs-target="#banner-slides" data-bs-slide-to="2" aria-label="Accessibility at Rochester"></button>
-      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/resource1.png" class="d-block w-100" alt="Three students outside on a college campus.  Two of the students are walking and one is traveling with them by wheelchair.">
