--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="#main" class="skip">Skip to main content</a>
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="assets/our_access_logo.png" alt="" height="32" class="d-inline-block align-text-top">
@@ -23,6 +24,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="map.html">Accessibility Map</a>
           </li>
           <li class="nav-item">
@@ -36,7 +41,7 @@
     </div>
   </nav>
 
-  <body>
+  <body id="main">
     <div id="banner">
         <h1 id="resources-heading">Home</h1>
       <img src="assets/resource1.png" alt="Three students outside on a college campus.  Two of the students are walking and one is traveling with them by wheelchair.">
