--- a/service-request.html
+++ b/service-request.html
@@ -13,6 +13,7 @@
     </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href="#main" class="skip">Skip to main content</a>
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
             <img src="assets/our_access_logo.png" alt="" height="32" class="d-inline-block align-text-top">
@@ -23,6 +24,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
           <li class="nav-item">
           <a class="nav-link" href="map.html">Accessibility Map</a>
         </li>
@@ -37,7 +41,7 @@
     </div>
   </nav>
 
-  <body>
+  <body id="main">
     <div id="service-form-container">
         <h1>Service Request</h1>
         <div id="request-instructions">
