make ui wcag accessible

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
 
     <div id="link-buttons">
-      <a href="map.html" type="button" class="btn btn-secondary">Accessibility Map</a>
-      <a href="service-request.html" type="button" class="btn btn-secondary">Service Requests</a>
-      <a href="disability-resources.html" type="button" class="btn btn-secondary">Disability Resources</a>
+      <a href="map.html" type="button" role="button" class="btn btn-secondary">Accessibility Map</a>
+      <a href="service-request.html" type="button" role="button" class="btn btn-secondary">Service Requests</a>
+      <a href="disability-resources.html" type="button" role="button" class="btn btn-secondary">Disability Resources</a>
     </div>
   </body>
   </html>
