add science quad buildings

--- a/map.html
+++ b/map.html
@@ -53,14 +53,20 @@
                             <option selected>Starting</option>
                             <option>Bausch & Lomb</option>
                             <option>Burton</option>
+                            <option>Carlson</option>
+                            <option>Computer Studies</option>
                             <option>Dewey</option>
+                            <option>Goergen</option>
                             <option>Hoyt</option>
+                            <option>Hutchinson</option>
+                            <option>Hylan</option>
                             <option>Interfaith Chapel</option>
                             <option>Lattimore</option>
                             <option>Meliora</option>
                             <option>Morey</option>
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
+                            <option>Wilmot</option>
                           </select>
                             <select class="form-select" aria-label="Select starting floor" id="start-floor" name="start-floor">
                                 <option selected>--</option>
@@ -71,14 +77,20 @@
                             <option selected>Destination</option>
                             <option>Bausch & Lomb</option>
                             <option>Burton</option>
+                            <option>Carlson</option>
+                            <option>Computer Studies</option>
                             <option>Dewey</option>
+                            <option>Goergen</option>
                             <option>Hoyt</option>
+                            <option>Hutchinson</option>
+                            <option>Hylan</option>
                             <option>Interfaith Chapel</option>
                             <option>Lattimore</option>
                             <option>Meliora</option>
                             <option>Morey</option>
                             <option>Rettner</option>
                             <option>Rush Rhees</option>
+                            <option>Wilmot</option>
                           </select>
                             <select class="form-select" aria-label="Select destination floor" id="end-floor" name="end-floor">
                                 <option selected>--</option>
